--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/mcacek/snappy-dash#readme",
   "devDependencies": {
     "angular": "1.4.7",
+    "autoprefixer": "^6.1.0",
     "brfs": "1.4.1",
     "browser-sync": "2.9.12",
     "browserify": "12.0.1",
@@ -30,6 +31,9 @@
     "gulp-watch": "4.3.5",
     "lodash": "3.10.1",
     "merge-stream": "1.0.0",
+    "postcss-custom-properties": "^5.0.0",
+    "postcss-import": "^7.1.3",
+    "postcss-nested": "^1.0.0",
     "postcss-reporter": "1.3.0",
     "purecss": "0.6.0",
     "require-dir": "0.3.0",
