feature(build) - Add browserify shim for global libs.

--- a/package.json
+++ b/package.json
@@ -45,7 +45,12 @@
   },
   "browserify": {
     "transform": [
-      "brfs"
+      "brfs",
+      "browserify-shim"
     ]
-  }
+  },
+  "browserify-shim": {
+    "angular": "angular",
+    "lodash": "_"
+  },
 }
