fix(build) - Ensure that browserify shim works correctly.

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     ]
   },
   "browserify-shim": {
-    "angular": "angular",
-    "lodash": "_"
+    "angular": "global:angular",
+    "lodash": "global:_"
   }
 }
