--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/mcacek/snappy-dash#readme",
   "devDependencies": {
     "angular": "1.4.7",
-    "autoprefixer": "^6.1.0",
+    "autoprefixer": "6.1.0",
     "brfs": "1.4.1",
     "browser-sync": "2.9.12",
     "browserify": "12.0.1",
@@ -31,13 +31,14 @@
     "gulp-watch": "4.3.5",
     "lodash": "3.10.1",
     "merge-stream": "1.0.0",
-    "postcss-custom-properties": "^5.0.0",
-    "postcss-import": "^7.1.3",
-    "postcss-nested": "^1.0.0",
+    "postcss-custom-properties": "5.0.0",
+    "postcss-import": "7.1.3",
+    "postcss-nested": "1.0.0",
     "postcss-reporter": "1.3.0",
     "purecss": "0.6.0",
     "require-dir": "0.3.0",
     "require-directory": "2.1.1",
+    "run-sequence": "1.1.4",
     "stylelint": "2.1.0",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
