feature(applications) - Initial styles for application landing.

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -3,6 +3,7 @@
     "color-hex-case": [2, "lower"],
     "custom-property-no-outside-root": 2,
     "declaration-colon-space-after": [2, "always"],
-    "value-no-vendor-prefix": 2
+    "value-no-vendor-prefix": 2,
+    "string-quotes": [2, "single"]
   }
 }
