--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-if": "2.0.0",
     "gulp-postcss": "6.0.1",
     "gulp-watch": "4.3.5",
+    "gulp-xo": "^0.6.1",
     "lodash": "3.10.1",
     "merge-stream": "1.0.0",
     "postcss-custom-properties": "5.0.0",
@@ -58,5 +59,12 @@
     "vue": "global:Vue",
     "vue-router": "global:VueRouter",
     "lodash": "global:_"
-  }
+  },
+	"xo": {
+    "envs": [
+      "node",
+      "mocha"
+    ],
+    "space": true
+	}
 }
